# singbox2proxy

./: .gitignore  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  publish.yml  release.yml
sb2p/: README.md  pyproject.toml
sb2p/sb2p/: __init__.py
scripts/: entry.py  install.ps1  install.sh
singbox2proxy/: __init__.py  base.py  batch.py  cli.py  client.py  parsers.py
tests/: core_test.py  proxy_test.py  route_test.py  test_parsers.py  tun_test.py
