[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "singbox2proxy.VERSION"}

[project]
name = "singbox2proxy"
dynamic = ["version"]
authors = [
    {name = "nichind", email = "nichind@proton.me"},
]
description = "🐳 Use sing-box (v2ray, xray) proxies (VLESS + REALITY, VMess, Trojan, Shadowsocks, Hysteria, Hysteria2, TUIC, WireGuard, SSH) directly in your http clients, with chaining support and easy CLI + Relay your traffic to bypass WHITELISTS"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "sing-box",
    "hysteria2",
    "v2ray",
    "v2core",
    "v2ray-core",
    "proxy",
    "vless",
    "vmess",
    "shadowsocks",
    "trojan",
    "python",
    "cli"
]
dependencies = []

[project.optional-dependencies]
cli = ["qrcode", "psutil"]
http = ["requests"]
fast = ["curl-cffi"]
socks = ["pysocks"]
all = ["qrcode", "psutil", "requests", "curl-cffi", "pysocks"]

[project.scripts]
singbox2proxy = "singbox2proxy.__main__:main"
sb2p = "singbox2proxy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/nichind/singbox2proxy"
"Issues" = "https://github.com/nichind/singbox2proxy/issues"

[tool.setuptools]
packages = {find = {exclude = ["tests", "tests.*", "sb2p", "sb2p.*"]}}

[tool.ruff]
line-length = 140